# DocuMind-Local

./: .gitignore  README.md  app.py  docling_scanner.py  pyproject.toml
Translastion-modell/: requirements.txt  translation_module.py
outputs/ocr/: DocuMind_Abschlusspraesentation_5390fcaf-10e4-4913-bc38-60bbc4f8018e.json
src/OCR/: README.md  docling_scanner.py
src/RAGBot/: README_ModulC.md  app_gesamt.py  eval_simple.py  ingest.py  lm_studio_rag.py  modul_b_stub.py  modul_d_stub.py  rag.py  rag_phi.py  requirements.txt
src/RAGBot/vectordb/: chroma.sqlite3
src/categorise/: README.md  __init__.py  cli.py  critc.md  docker.py  lm_studio.py  models.py  prompts.py  service.py  store.py  vector.py
src/categorise/test_docs/: dok_01_eingangsrechnung.txt  dok_02_besprechungsprotokoll.txt  dok_03_projektstatusbericht.txt  dok_04_reisekostenabrechnung.txt  dok_05_technische_spezifikation.txt  dok_06_lieferschein.txt  dok_07_risikoregister_auszug.txt  dok_08_abnahmeprotokoll.txt  dok_09_besprechung_teilabnahme.txt  dok_10_status_email.txt  dok_11_kombinierte_rechnung_leistungsnachweis.txt  dok_12_spezifikation_abnahme.txt  dok_13_schulungsunterlage.txt  dok_14_behoerdenkorrespondenz.txt  dok_15_versicherungsdokument.txt  dok_16_lessons_learned.txt
src/translator/: README_Modell D.md  app_gesamt.py  config.py  models.py  requirements.txt  service.py  test_translation.py  translate.py  utils.py
