[project]
name = "documind-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sacremoses>=0.1.1",
    "sentence-transformers>=5.5.1",
    "sentencepiece>=0.2.1",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "typer>=0.25.1",
]
